# xgl

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test.yml
src/: framebuffer.rs  lib.rs  matrices.rs  program.rs  shader.rs  stack.rs  texture.rs  vertices.rs  winit.rs
src/opengl/: context.rs  mod.rs
src/sys/: gl.rs  mod.rs
src/sys/opengl/: bindings.rs  context.rs  mod.rs
src/sys/webgl/: context.rs  mod.rs
src/webgl/: context.rs  mod.rs
