[package]
name = "xgl"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/d-e-s-o/xgl.git"
categories = [
  "external-ffi-bindings",
  "graphics",
  "rendering::graphics-api",
]
keywords = [
  "gamedev",
  "gl",
  "graphics",
  "opengl",
]
description = """
Unified minimalist OpenGL 3.3 & WebGL abstractions.
"""

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = {version = "0.2", default-features = false, features = ["std"]}
web-sys = {version = "0.3", default-features = false, features=[
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
]}

[lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
too_many_arguments = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
multiple-unsafe-ops-per-block = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
undocumented-unsafe-blocks = "warn"
uninlined-format-args = "warn"
use-self = "warn"
wildcard-imports = "warn"
